<resources>
    <string name="app_name">Split It</string>

    <string-array name="splitType">
        <item>均分</item>
        <item>部份均分</item>
        <item>按比例分</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ruby Sun</string>
    <string name="nav_header_subtitle">rubysun137@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="split_it">Split It!</string>
    <string name="login_email">帳號 / Email</string>
    <string name="login_password">密碼</string>
    <string name="login_nick_name">暱稱</string>
    <string name="login_login">登入</string>
    <string name="login_registration">註冊</string>
    <string name="google_login">Google 登入</string>
    <string name="forget_password">忘記密碼</string>
    <string name="main_page">主頁面</string>
    <string name="spend_page">記帳頁面</string>
    <string name="split_page">拆帳頁面</string>
    <string name="quick_split_page">快速拆帳</string>
    <string name="change_style">切換主題</string>
    <string name="logout">登出</string>
    <string name="enter_email">請輸入 Email</string>
    <string name="add_group_kick">把</string>
    <string name="add_group_out">移出群組</string>
    <string name="delete_friend_title">刪除好友</string>
    <string name="delete_friend_content">請問確定要刪除好友嗎?</string>
    <string name="delete_group_title">刪除群組</string>
    <string name="delete_group_content">請問確定要刪除群組嗎?</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="settle_up">結清帳務</string>
    <string name="pay">付給</string>
    <string name="yen">元</string>
    <string name="save">儲存</string>
    <string name="add_friend_to_new_group">增加好友進入群組</string>
    <string name="group_member">群組成員</string>
    <string name="group_name">群組名稱</string>
    <string name="enter_group_name">請輸入群組名稱</string>
    <string name="add_group">新增群組</string>
    <string name="add_list">新增拆帳清單</string>
    <string name="add_list_member">人員 :</string>
    <string name="add_list_you">你 和</string>
    <string name="title">標題</string>
    <string name="group">群組</string>
    <string name="payer">付款人</string>
    <string name="amount">金額</string>
    <string name="tip">服務費</string>
    <string name="date">日期</string>
    <string name="split_type">拆帳方式</string>
    <string name="upload_receipt">上傳收據</string>
    <string name="percent">%</string>
    <string name="owe">欠</string>
    <string name="has_settled_up">帳務結清</string>
    <string name="no_event">無帳務關係</string>
    <string name="group_no_event">群組尚無分帳清單</string>
    <string name="expense">花費</string>
    <string name="balance">結算</string>
    <string name="overview">總覽</string>
    <string name="still_have">尚有</string>
    <string name="friend_still_have">朋友尚有</string>
    <string name="need_to_pay_you">筆帳務需支付你</string>
    <string name="you_need_to_pay">筆帳務須向朋友結清</string>
    <string name="group_overview">群組總覽</string>
    <string name="friend_overview">好友總覽</string>
    <string name="ntd_dollar">NTD :</string>
    <string name="split_detail">分帳細節</string>
    <string name="delete_event">刪除清單</string>
    <string name="person">人</string>
    <string name="people_amount">人數 :</string>
    <string name="not_include_tip">不含服務費</string>
    <string name="amount_dot">金額 :</string>
    <string name="reset">重設</string>
    <string name="tip_dot">服務費 :</string>
    <string name="average_each_person">平均每人:</string>
    <string name="friend">好友</string>
    <string name="add_friend">新增好友</string>
    <string name="share">分攤$</string>
    <string name="plus">+</string>
    <string name="split_percent">分攤比例</string>
    <string name="dollar_sign">$</string>
    <string name="need_to_pay">需付</string>
    <string name="can_not_delete_yourself">不能把自己移出群組啦~</string>
    <string name="friend_pay_back">朋友還你</string>
    <string name="you_pay_back">妳還朋友</string>
    <string name="you_should_pay">你應還</string>
    <string name="you_lent">你借出</string>
    <string name="let">由</string>
    <string name="payed">付款</string>
    <string name="paying">支付</string>
    <string name="should_share">應分攤 $</string>
    <string name="include_shared_money">含分攤費用 $</string>
    <string name="you">你</string>
    <string name="need_a_friend_to_create_group">須至少加入一位朋友才能建立群組</string>
</resources>
